# fintext-signal-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
examples/: fetch_real_data.py
examples/data/: edgar_filings.json  investment_briefings.json  llm_extractions.json  news_articles.csv  news_articles.json  news_articles_scored.json  top_entities.json
scripts/: generate_screenshots.py
src/nlp/: __init__.py  edgar.py  extractor.py  fetcher.py  ner.py  schemas.py  sentiment.py
tests/: test_edgar.py  test_extractor.py  test_fetcher.py  test_integration.py  test_schemas.py  test_sentiment.py
